--- a/index.html
+++ b/index.html
@@ -3,16 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shubham Lahoti | Portfolio</title>
+    <title>Shubham Lahoti | Software Developer</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>Shubham Lahoti</h1>
-        <p>Welcome to my personal website!</p>
+        <div class="marquee">
+            <p>Software Developer | Problem Solver | Tech Enthusiast</p>
+        </div>
     </header>
 
-    <section class="profile-links">
+    <section class="about">
+        <p>Experienced full stack developer known for efficient solutions that scale globally.</p>
+    </section>
+
+    <section class="experience">
+        <h2>Experience</h2>
+        <div class="job">
+            <h3>Oracle, Software Developer 2</h3>
+            <p>Optimized APIs for 1,700+ clients, boosting throughput by 20%. Developed dynamic data APIs and mentored team members, increasing productivity and reducing errors.</p>
+        </div>
+        <div class="job">
+            <h3>Deutsche Bank, Rates Business Finance Intern</h3>
+            <p>Collaborated on financial systems with NY teams, improving system efficiency and reducing processing times.</p>
+        </div>
+    </section>
+
+    <section class="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>Java</li>
+            <li>Python</li>
+            <li>Oracle SQL</li>
+            <li>PL/SQL</li>
+            <li>REST APIs</li>
+            <li>Linux</li>
+            <li>Git</li>
+            <li>Oracle Cloud</li>
+            <li>Microservices</li>
+        </ul>
+    </section>
+
+    <section class="connect">
         <h2>Connect with Me</h2>
         <ul>
             <li><a href="https://www.linkedin.com/in/shubham-p-lahoti-a0b1b9105/" target="_blank">LinkedIn</a></li>
@@ -22,7 +55,7 @@
     </section>
 
     <footer>
-        <p>© 2024 Shubham Lahoti. All rights reserved.</p>
+        <p>© 2024 Shubham Lahoti</p>
     </footer>
 </body>
 </html>
