--- a/index.html
+++ b/index.html
@@ -14,11 +14,20 @@
         </div>
     </header>
 
-    <section class="about">
+    <nav>
+        <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#connect">Connect</a></li>
+        </ul>
+    </nav>
+
+    <section class="about" id="about">
         <p>Experienced full stack developer known for efficient solutions that scale globally.</p>
     </section>
 
-    <section class="experience">
+    <section class="experience" id="experience">
         <h2>Experience</h2>
         <div class="job">
             <h3>Oracle, Software Developer 2</h3>
@@ -30,7 +39,7 @@
         </div>
     </section>
 
-    <section class="skills">
+    <section class="skills" id="skills">
         <h2>Skills</h2>
         <ul>
             <li>Java</li>
@@ -45,7 +54,7 @@
         </ul>
     </section>
 
-    <section class="connect">
+    <section class="connect" id="connect">
         <h2>Connect with Me</h2>
         <ul>
             <li><a href="https://www.linkedin.com/in/shubham-p-lahoti-a0b1b9105/" target="_blank">LinkedIn</a></li>
@@ -57,5 +66,7 @@
     <footer>
         <p>© 2024 Shubham Lahoti</p>
     </footer>
+
+    <a href="#" class="back-to-top">↑</a>
 </body>
 </html>
